<resources>
    <string name="app_name">Healthy Lifestyle</string>
    <string name="Label_Heading">Healthy Lifestyle</string>
    <string name="Label_Account">Create a new account</string>
    <string name="Label_BestExperince">For the best experience with app</string>
    <string name="Label_Sign_up">Sign up</string>
    <string name="Label_Login">Log In</string>
    <string name="Label_SignupEmail">Sign up with Email </string>
    <string name="Label_SignupPhone">Sign up with Phone Number </string>
    <string name="Label_Username">Username</string>
    <string name="Label_Password">Password</string>
    <string name="Label_Email">Email</string>
    <string name="Label_Phone">Mobile Number</string>
    <string name="Label_GetStarted">Get Started</string>
    <string name="Label_Physiques">Enter Your Physiques</string>
    <string name="label_goals">Enter Your Goals</string>
    <string name="Label_Age">Age</string>
    <string name="Label_Height">Height</string>
    <string name="Label_Weight">Weight</string>
    <string name="Label_Level">Level</string>
    <string name="Label_Settings">Settings</string>
    <string name="Label_Profile">Profile</string>
    <string name="Label_LanguageOptions">Language Options</string>
    <string name="Label_Language">Language</string>
    <string-array name="language_option">
        <item>English</item>
        <item>Hindi</item>
        <item>Spanish</item>
    </string-array>
    <string name="Label_HeathData">Health data</string>
    <string name="Label_createPlans">Create Plan</string>
    <string name="Label_referFriend">Refer Friend</string>
    <string name="Label_Feedback">Feedback</string>
    <string name="Label_LogOut">Logout</string>
    <string name="Label_SelectLevel">Select your Level</string>
    <string name="Label_Beginner">Beginner</string>
    <string name="Label_Advance">Advance</string>
    <string name="Label_Intermidiate">Intermediate</string>
    <string name="Label_SelectWeight">Select your weight</string>
    <string name="Label_SelectHeight">Select your Height</string>
    <string name="Label_SelectAge">Select your Age</string>
    <string name="Label_ConfiemDetails">Confirm Details</string>
    <string name="Label_Finish">Finish</string>
    <string name="Label_CompletedTask">Completed Task</string>
    <string name="Label_Goals">Goals</string>
    <string name="Label_Reminders">Reminders</string>
    <string name="Label_Plans">Plans</string>
    <string name="Label_FitnessDevice">Fitness Device</string>
    <string name="Label_Drink">DRINK</string>
    <string name="Label_Food">Food</string>
    <string name="Label_Sleep">Sleep</string>
    <string name="Label_DailyGoal">Daily Goal</string>
    <string name="Label_CupSize">Cup Size</string>
    <string name="Label_Reminder">Hourly water reminder</string>
    <string name="Label_Time">Time Interval</string>
    <string name="Label_Start">Start</string>
    <string name="Label_End">End</string>
    <string name="Label_Looosemass">Loose Mass</string>
    <string name="Label_date">May 14-jun13</string>
    <string name="Label_Gainmass">Gain Mass</string>
    <string name="Label_MealPlan">Meal Plan</string>
    <string name="Label_Breakfast">Breakfast</string>
    <string name="Label_personalizedData">Personalized workout will help \n you gain Strength</string>
    <string name="Label_SeeMore">See More</string>
    <string name="Label_Snack">Snack</string>
    <string name="Label_SleepReminder">Sleep Reminder</string>
    <string name="Label_Activity">Activity</string>
    <string name="Label_AddActivity">Add Activity</string>
    <string name="Label_AddNewActivity">Add New Activity</string>
    <string name="Label_forgot">Forget password ?</string>
    <string name="Label_Workput">Workout</string>
    <string name="Label_Dinner">Dinner</string>
    <string name="Label_Lunch">Lunch</string>
    <string name="Label_Water">Water</string>
    <string name="Label_DailyAgenda">Daily Agenda</string>
    <string name="Label_PrivacyPolicy">Privacy Policy</string>
    <string name="Label_Article1">Article 1</string>
    <string name="Label_whoMayUse">Who May Use The Service</string>
    <string name="Label_Privacy">Privacy</string>
    <string name="Label_SureLogout">Are you sure want to logout?</string>
    <string name="Label_No">No</string>
    <string name="Label_Yes">Yes</string>
    <string name="Label_Close">Close</string>
    <string name="Label_PrivacyData">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.
    \n\t Step 1:You may use the Services only if you agree to form a binding contract with us and are not a person barred from receiving services under the laws of the applicable jurisdiction. \n\t Step 2:Our privacy Policy describes hoe we handle the infromation you provide to us when you use our services. </string>
    <string name="Label_PrivacyData1">When one door of happiness closes, another opens, but often we look so long at the closed door that we do not see the one that has been opened for us.
    </string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Label_ProgressStaticData">Lorem ipsum dolor sit amet, consectetur adipisicing elite, sed do</string>
    <string name="Label_EnterName">Enter Your Name Here</string>
    <string name="Label_EnterEmail"> Enter Your Email Id</string>
    <string name="Label_EnterPhone"> Enter Mobile No.</string>
    <string name="Label_SelectProfile"> Select Profile Picture</string>
    <string name="Label_Save">Save</string>
    <string name="Label_Skip">Skip</string>
    <string name="Label_fillDetails"> Please fill the details</string>
    <string name="Label_SundayDate">Sunday,Aug 26</string>
    <string name="Label_GetCode">Get Verification Code</string>
    <string name="Label_ManageData">Manage My Data</string>
    <string name="Label_MyFitnessLevel">My Fitness Level</string>
    <string name="Label_RestartbasicPlan">Restart Basic Plan</string>
    <string name="facebook_app_id">2476754999088180</string>
    <string name="fb_login_protocol_scheme">fb2476754999088180</string>
    <string name="title_activity_recipes_tab">RecipesTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Label_Connect">Connect to Device</string>
    <string name="Label_GoogleFit">Google Fit</string>
    <string name="Label_Connect1">Connect</string>
    <string name="Label_OtherDevice">Other Device</string>
    <string name="Label_Find">Find</string>
    <string name="Label_Instructions">Instructions</string>
    <string name="Label_Ingrediants">Ingrediants</string>
    <string name="Label_HealthTips">Health Tips</string>
    <string name="Label_Diet">A Diet Without Exercise is Useless</string>
    <string name="Label_Tips">1)Interval Training is a form of exercise in which you alternate between two or more different exercise . This consist of doing an exercise at a very high level intensity for a short bursts
    \n2) Some high intensity interval training is a great way to burn calories and loose weight.
    \n3)Another great thing is about inteval training is that it is extremely time efficient . it does not make any time to get into shape when you practice high intensity interval training.
    \n4)Execise, especially high intensity interval training is awesome beacause it keeps you</string>
    <string name="Label_send_feedback">Send feedback</string>
    <string name="Label_feedback_email">YourEmailAdress</string>
    <string name="Label_feedback_subject">Feedback on your app</string>
    <string name="Label_feedback_message">Your Feedback message</string>
    <string name="_8213_8213_or_sign_up_with_social_profiles_8213_8213">―― or Sign up with social profiles ――</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="to_reset_your_password_enter_your_email_press_button_and_check_your_mail_to_follow_intsructions">To reset your password, enter your email, press button and check your mail to follow instructions.</string>
    <string name="update">Update</string>
    <string name="enter_your_email_here">Enter your email here…</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="choose_a_level">Choose a level</string>
    <string name="sleep">Sleep</string>
    <string name="drinks">Drink</string>
    <string name="food">Food</string>
    <string name="activity">Activities</string>
    <string name="health_tips_and_exercise_plans_will_be_available_soon">Health tips and exercise plans will be available soon…</string>
    <string name="delete_activity_confirmation">Are you sure you want to delete this activity?</string>
    <string name="activity_delete_successful_message">Activity deleted successfully</string>
    <string name="enter_activity_description">Enter activity description</string>
    <string name="quantity">Quantity</string>
    <string name="your_daily_activities_will_appear_here">Your daily activities will appear here</string>
    <string name="your_feedback_is_very_important_to_us">Your Feedback is very important to us</string>
    <string name="fitbit">Fitbit</string>
    <string name="samsung_health">Samsung Health</string>
    <string name="fit_bands">Fit bands</string>
    <string name="e_g_7_litres">e.g. 7 litres</string>
    <string name="e_g_8_hours">e.g. 8 hours</string>
    <string name="e_g_3_times">e.g. 3 times</string>
    <string name="_25">25</string>
    <string name="_175cm">175cm</string>
    <string name="_75_kg">75 kg</string>
    <string name="english">English</string>
    <string name="bengali">Bengali</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location">Location</string>
    <string name="count">Count</string>
    <string name="lose_mass">Lose Mass</string>
    <string name="mi">MI</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="please_fill_the_details">Please Fill the details</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="upload_image_to_firebase_storage">Upload image to Firebase Storage</string>
    <string name="chinese">Chinese</string>
    <string name="hindi">Hindi</string>
    <string name="share_link">"Use %s to achieve your health goals.\n\nUpgrade Yourself!\n\nDownload the app from Play Store NOW!!"</string>
    <string name="healthy_recipes_will_appear_here">Healthy recipes will appear here</string>
    <string name="enter_your_text_here">Enter your text here</string>
</resources>