<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_activity"
        android:icon="@drawable/activity_image"
        android:title="@string/Label_Activity"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_recipes"
        android:icon="@drawable/ic_recipes_black"
        android:title="@string/menu_recipes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/Label_Settings"
        app:showAsAction="ifRoom" />
</menu>