<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
<!--
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_plans_black"
            android:iconTint="@color/colorYellow"
            android:title="@string/menu_plans" />
-->
        <item
            android:id="@+id/nav_home_recipes"
            android:icon="@drawable/ic_recipes_black"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/menu_privacy" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_aboutusr_outline_black"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/colorYellow"
            android:title="@string/Label_LogOut" />
    </group>
    <!--

        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send" />
            </menu>
        </item>
    -->

</menu>
