<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_fill_the_details"
            android:id="@+id/textview"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ShowImageView1"
            android:layout_below="@+id/textview"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonChooseImage"
            android:layout_below="@+id/ShowImageView"
            android:layout_marginTop="20dp"
            android:text="@string/select_profile_picture" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditTextName"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_name_here"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditTextEmail"

            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_email_id"
            android:gravity="center"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditTextMobileNo"

            android:layout_marginTop="20dp"
            android:hint="@string/enter_mobile_no"
            android:gravity="center"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonUploadImage"
            android:layout_marginTop="20dp"
            android:text="@string/upload_image_to_firebase_storage" />
    </LinearLayout>
