<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.StartedActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/Label_GetStarted"
            android:textColor="@color/colorGreen"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Label_Physiques"
            android:textColor="@color/colorBlack1"
            android:textSize="18dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Label_Age"
            android:textColor="@color/colorBlack" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonHeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Label_Height"
            android:textColor="@color/colorBlack" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Label_Weight"
            android:textColor="@color/colorBlack" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLevel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Label_Level"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</LinearLayout>