<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_transparent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Label_SureLogout"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/ButtonNo"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/Label_No"
            android:layout_margin="20dp"
            android:background="@drawable/login_btn_background"/>

        <Button
            android:id="@+id/ButtonYes"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/Label_Yes"
            android:layout_margin="20dp"
            android:background="@drawable/login_btn_background"/>

    </LinearLayout>

</LinearLayout>